# rich_progress_bar

./: Cargo.toml  Readme.md
src/: lib.rs  main.rs
tests/: progress_bar.rs
